# todo-list-app

./: .dockerignore  .env.example  Dockerfile  README.md  README_ru.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: CONFIG.md
docs/ru/: CONFIG.md
scripts/: docker-entrypoint.sh
tests/domain/: test_task.py
todoapp/: __main__.py
todoapp/application/auth/: dto.py  exceptions.py  jwt.py
todoapp/application/auth/commands/: __init__.py  deactivate.py  produce.py  refresh.py
todoapp/application/auth/interfaces/: repository.py
todoapp/application/auth/queries/: __init__.py  auth_creds.py  auth_token.py
todoapp/application/common/: dto.py  exceptions.py  pagination.py
todoapp/application/task/: dto.py  exceptions.py
todoapp/application/task_list/: dto.py  exceptions.py
todoapp/application/user/: exceptions.py
todoapp/common/: settings.py
todoapp/domain/access/: __init__.py  operation.py
todoapp/domain/common/: constants.py  entities.py  exceptions.py  value_objects.py
todoapp/domain/task/: constants.py  entities.py  exceptions.py  value_objects.py
todoapp/domain/task_list/: entities.py  exceptions.py  value_objects.py
todoapp/domain/tasks_list/: entities.py  exception.py  value_objects.py
todoapp/domain/user/: entities.py  entitites.py  exceptions.py
todoapp/infra/: mediator.py
todoapp/infra/db/: connect.py  main.py  models.py
todoapp/infra/di/: main.py
todoapp/infrastructure/: mediator.py
todoapp/infrastructure/auth/: di.py  jwt.py  repository.py
todoapp/infrastructure/db/: main.py  models.py  uow.py
todoapp/infrastructure/di/: __init__.py  main.py
todoapp/infrastructure/passhash/: bcrypt.py
todoapp/infrastructure/redis/: main.py
todoapp/presentation/api/: doc.py  main.py
(+76 files in other folders)
