[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = ""
authors = ["Vitaliy Ukiru <33477790+vitaliy-ukiru@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
didiator = {extras = ["di"], version = "^0.3.1"}
uuid6 = "^2024.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
