[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = ""
authors = ["Vitaliy Ukiru <33477790+vitaliy-ukiru@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
didiator = {extras = ["di"], version = "^0.3.1"}
uuid6 = "^2024.1.12"
bcrypt = "^4.1.3"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
redis = {extras = ["hiredis"], version = "^5.0.6"}
aiofiles = "^23.2.1"
pytest = {version = "^8.3.2", extras = ["test"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
